ITF, plus working basic add and delete

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 </head>
 <body>
-	<form method="post" action="LoginServlet" class="col-md-12 text-center">
+	<form method="post" action="home" class="col-md-12 text-center">
 		<div class="col-md-12">
 			<div>
 				<div><h2>Voici un premier exemple avec les servlets.</h2></div>	
